[fixed] set Popup header z-index, resolves #809

--- a/less/ui.modal.less
+++ b/less/ui.modal.less
@@ -365,6 +365,7 @@
 .@{ns}popup-hd {
   position: absolute;
   top: 0;
+  z-index: @global-z-index;
   width: 100%;
   height: 43px;
   border-bottom: 1px solid @modal-border-color;
